# rtgs

./: Cargo.toml  README.md  index.html
arcium private vote/: Cargo.toml  README.md  index.html  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
arcium private vote/programs/dao_voting/encrypted-ixs/: Cargo.toml
arcium private vote/programs/dao_voting/encrypted-ixs/src/: lib.rs
arcium private vote/programs/dao_voting/src/: errors.rs  lib.rs  state.rs
arcium private vote/programs/dao_voting/src/handlers/: cast_vote.rs
arcium private vote/src/react-app/: app.tsx  css.d.ts  entry-server.tsx  globals.css  main.tsx  mockData.ts  types.ts  vite-env.d.ts
arcium private vote/src/react-app/components/: Header.tsx  LandingPage.tsx  ProposalCard.tsx  ProposalDashboard.tsx  ProposalList.tsx  ResultsModal.tsx  VoteModal.tsx
arcium private vote/src/worker/: index.ts
src/handlers/: create_proposal.rs  finalize_proposal.rs  initialize_dao.rs  mod.rs
