     1|[workspace]
     2|members = [
     3|    "programs/dao_voting",
     4|    "programs/dao_voting/encrypted-ixs",
     5|]
     6|resolver = "2"
     7|
     8|[profile.release]
     9|overflow-checks = true
    10|lto = "fat"
    11|codegen-units = 1
    12|
    13|[profile.release.build-override]
    14|opt-level = 3
    15|incremental = false
    16|codegen-units = 1
    17|